<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Error"
    android:background="@color/background_dark">

    <ImageView
        android:id="@+id/discon_img"
        android:layout_width="370dp"
        android:layout_height="200dp"
        android:src="@drawable/disconet"
        android:layout_marginTop="120dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <TextView
        android:id="@+id/tv_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/discon"
        android:textColor="@color/text_secondary"
        android:textSize="@dimen/text_size_xlarge"
        app:layout_constraintTop_toBottomOf="@id/discon_img"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
         />

    <TextView
        android:id="@+id/tv_forgot_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/obnovit"
        android:textColor="@color/text_tertiary"
        android:textSize="@dimen/text_size_small"
        app:layout_constraintTop_toBottomOf="@id/tv_register"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
         />
    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_confirm"
        android:layout_width="0dp"
        android:layout_height="@dimen/button_height"
        android:layout_marginHorizontal="@dimen/spacing_medium"
        android:layout_marginTop="@dimen/spacing_large"
        android:text="@string/confirm"
        android:textColor="@color/button_text"
        android:backgroundTint="@color/button_primary"
        app:cornerRadius="@dimen/corner_radius_xlarge"
        app:layout_constraintTop_toBottomOf="@id/tv_forgot_password"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>